feature additional update values
Added new dialog to add extra value in amortization table

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/fragment_amortization_table.xml
+++ b/app/src/main/res/layout/fragment_amortization_table.xml
@@ -135,6 +135,12 @@
             </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_add_payment_at"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_extra"/>
+
     <TableLayout
         android:id="@+id/tableAT"
         android:layout_width="match_parent"
