--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -205,7 +205,11 @@
         android:id="@+id/amortizationTableFragment"
         android:name="co.japl.android.myapplication.finanzas.controller.AmortizationTableFragment"
         android:label="@string/amortization_table"
-        tools:layout="@layout/fragment_amortization_table" />
+        tools:layout="@layout/fragment_amortization_table" >
+        <action
+            android:id="@+id/action_amortizationTableFragment_to_extraValueListController"
+            app:destination="@id/extraValueListController" />
+    </fragment>
     <fragment
         android:id="@+id/additionalCreditFragment"
         android:name="co.japl.android.myapplication.finanzas.controller.AdditionalCreditFragment"
@@ -386,5 +390,9 @@
         android:name="co.japl.android.myapplication.finanzas.controller.PeriodCheckPaymentsFragment"
         android:label="@string/paids"
         tools:layout="@layout/fragment_period_check_payments" />
+    <fragment
+        android:id="@+id/extraValueListController"
+        android:name="co.japl.android.myapplication.finanzas.controller.ExtraValueListController"
+        android:label="ExtraValueListController" />
 
 </navigation>
