--- a/app/src/main/res/layout/fragment_amortization_credit.xml
+++ b/app/src/main/res/layout/fragment_amortization_credit.xml
@@ -162,15 +162,31 @@
                         android:textAlignment="center"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_additional_acf"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/btn_extra_values_list_acf"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/additional_to_pay"
+                    android:layout_weight="1"
+                    android:text="@string/extra_value_list"
                     android:layout_margin="@dimen/space_min"
-                    android:layout_gravity="right"
                     app:icon="@android:drawable/ic_menu_search" />
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_additional_acf"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/additional_to_pay"
+                    android:layout_margin="@dimen/space_min"
+                    app:icon="@android:drawable/ic_menu_search" />
+
+                </LinearLayout>
                 <TableLayout
                     android:layout_width="match_parent"
                     android:layout_margin="@dimen/space_min"
