--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -244,6 +244,9 @@
         <action
             android:id="@+id/action_amortizationCreditFragment_to_additionalListFragment"
             app:destination="@id/additionalListFragment" />
+        <action
+            android:id="@+id/action_amortizationCreditFragment_to_extraValueListController"
+            app:destination="@id/extraValueListController" />
     </fragment>
     <fragment
         android:id="@+id/creditListFragment"
