feature additional update values
added buttons quote credit card and cash advance in list of bought

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/fragment_list_bought.xml
+++ b/app/src/main/res/layout/fragment_list_bought.xml
@@ -7,6 +7,25 @@
     android:layout_margin="@dimen/margin_border_layout"
     tools:context=".controller.ListBought">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_quote_lbcc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:contentDescription="@string/quote_credit"
+        android:src="@android:drawable/ic_input_add"
+        android:layout_margin="16dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_cashadvc_lbcc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:contentDescription="@string/cash_advance"
+        android:src="@android:drawable/ic_menu_add"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="82dp"/>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
