--- a/app/src/main/res/layout/fragment_list_bought.xml
+++ b/app/src/main/res/layout/fragment_list_bought.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
         android:contentDescription="@string/quote_credit"
-        android:src="@android:drawable/ic_input_add"
-        android:layout_margin="16dp"/>
+        android:src="@android:drawable/ic_input_add" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_cashadvc_lbcc"
@@ -118,6 +118,7 @@
                 />
 
             <ScrollView
+                android:id="@+id/scroll_qccl"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
