feature additional update values
fix issue with scrioll objecc
t

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout-land/fragment_list_bought.xml
+++ b/app/src/main/res/layout-land/fragment_list_bought.xml
@@ -24,7 +24,8 @@
         android:src="@android:drawable/ic_menu_add"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="82dp"/>
-    <androidx.core.widget.NestedScrollView
+    <ScrollView
+        android:id="@+id/scroll_qccl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -138,6 +139,6 @@
             </ScrollView>
 
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 
 </FrameLayout>
