feature Added Inject annotation Hilt/dagger
Added anotation on all fragment class to inject services and fix issue with scoll in quote credit card list fragment

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout-land/fragment_list_bought.xml
+++ b/app/src/main/res/layout-land/fragment_list_bought.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="@dimen/margin_border_layout"
     tools:context=".controller.ListBought">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_quote_lbcc"
@@ -24,8 +23,7 @@
         android:src="@android:drawable/ic_menu_add"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="82dp"/>
-    <ScrollView
-        android:id="@+id/scroll_qccl"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -122,9 +120,10 @@
             </LinearLayout>
 
             <ScrollView
+                android:id="@+id/scroll_qccl"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -139,6 +138,6 @@
             </ScrollView>
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
