--- a/app/src/main/res/layout-sw720dp/fragment_list_bought.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_list_bought.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="@dimen/margin_border_layout"
     tools:context=".controller.ListBought">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_quote_lbcc"
@@ -25,8 +24,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="82dp"/>
 
-    <ScrollView
-        android:id="@+id/scroll_qccl"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -120,9 +118,9 @@
             </LinearLayout>
 
             <ScrollView
+                android:id="@+id/scroll_qccl"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp">
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -137,6 +135,6 @@
             </ScrollView>
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
