feature added type light credit card settiong
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -35,6 +35,11 @@
         <item name="boxStrokeColor">@color/green_background</item>
     </style>
 
+    <style name="MaterialTextInputLayoutViewLight" parent="MaterialTextInputLayoutView">
+        <item name="backgroundColor">@color/green_background_light</item>
+
+    </style>
+
     <style name="MaterialTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">@color/green_background</item>
         <item name="strokeWidth">2dp</item>
