--- a/app/src/main/res/layout/dialog_bought_credit_card_recap.xml
+++ b/app/src/main/res/layout/dialog_bought_credit_card_recap.xml
@@ -306,6 +306,98 @@
                 android:textAlignment="textEnd"
                 android:textStyle="italic" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/MaterialTextInputLayoutView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="1"
+                android:hint="@string/num_quote_end"
+                app:prefixText="$">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_num_quote_end_dbccr"
+                    style="@style/MaterialTextInputLayoutView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:hint="@string/money_hint"
+                    android:textAlignment="textEnd"
+                    android:textStyle="italic" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/MaterialTextInputLayoutView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="1"
+                android:hint="@string/total_quote_end"
+                app:prefixText="$">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_total_quote_end_dbccr"
+                    style="@style/MaterialTextInputLayoutView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:hint="@string/money_hint"
+                    android:textAlignment="textEnd"
+                    android:textStyle="italic" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/MaterialTextInputLayoutView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="1"
+                android:hint="@string/num_quote_next_end"
+                app:prefixText="$">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_num_quote_next_end_dbccr"
+                    style="@style/MaterialTextInputLayoutView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:hint="@string/money_hint"
+                    android:textAlignment="textEnd"
+                    android:textStyle="italic" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/MaterialTextInputLayoutView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="1"
+                android:hint="@string/total_quote_next_end"
+                app:prefixText="$">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_total_quote_next_end_dbccr"
+                    style="@style/MaterialTextInputLayoutView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:hint="@string/money_hint"
+                    android:textAlignment="textEnd"
+                    android:textStyle="italic" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
     </LinearLayout>
     </ScrollView>
 </com.google.android.material.card.MaterialCardView>
