--- a/app/src/main/res/layout-land/quote_credit.xml
+++ b/app/src/main/res/layout-land/quote_credit.xml
@@ -52,40 +52,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            app:endIconMode="clear_text"
-            android:layout_margin="@dimen/space_min"
-            app:suffixText="%"
-            android:layout_weight="2">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etTax"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/tax"
-            android:inputType="numberDecimal"
-            android:textAlignment="textEnd" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_margin="@dimen/space_min"
-                    android:layout_weight="2"
-                    app:endIconMode="clear_text">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etKindOfTax"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:focusable="false"
-                        android:hint="@string/kind_of_tax"
-                        android:textAlignment="textEnd"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_height="match_parent"
@@ -104,7 +71,81 @@
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-    <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    app:endIconMode="clear_text"
+                    android:layout_margin="@dimen/space_min"
+                    app:suffixText="%"
+                    android:layout_weight="1">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etTax"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="@string/tax"
+                        android:inputType="numberDecimal"
+                        android:textAlignment="textEnd" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_margin="@dimen/space_min"
+                    android:layout_weight="1"
+                    app:endIconMode="clear_text">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etKindOfTax"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:focusable="false"
+                        android:hint="@string/kind_of_tax"
+                        android:textAlignment="textEnd"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:endIconMode="clear_text">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_initial_quote_sqc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/space_min"
+                        android:ems="10"
+                        android:hint="@string/initial_quote"
+                        android:inputType="numberDecimal"
+                        android:textAlignment="textEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:endIconMode="clear_text">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_kind_initial_quote_sqc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:hint="@string/kind_initial_quote"
+                        android:textAlignment="textEnd"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+
+            <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -141,6 +182,7 @@
 
     </LinearLayout>
 
+
     <LinearLayout
         android:id="@+id/lyInterestValue"
         android:layout_width="match_parent"
@@ -151,10 +193,47 @@
         tools:layout_editor_absoluteX="1dp">
 
         <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/MaterialTextInputLayoutView"
+            android:layout_weight="1"
+            app:prefixText="$"
+            android:hint="@string/initial_quote">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tv_value_quote_initial_sqc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:enabled="false"
+                style="@style/MaterialTextInputLayoutView"
+                android:text="@string/quote_credit_hint"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/MaterialTextInputLayoutView"
+            app:prefixText="$"
+            android:hint="@string/credit_value">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tv_total_credit_sqc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:enabled="false"
+                style="@style/MaterialTextInputLayoutView"
+                android:text="@string/quote_credit_hint"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/quote_value"
+            android:layout_weight="1"
             style="@style/MaterialTextInputLayoutView"
             app:prefixText="$"
             android:textStyle="bold" >
