--- a/app/src/main/res/layout-land/bought_item_list.xml
+++ b/app/src/main/res/layout-land/bought_item_list.xml
@@ -24,6 +24,12 @@
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="1dp">
 
+            <ImageView
+                android:id="@+id/img_tag_bil"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_location_on_24"/>
+
         <TextView
             android:id="@+id/tvBoughtDate"
             android:layout_width="wrap_content"
@@ -46,6 +52,17 @@
             android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvTotalQuoteBought"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/quote_credit_hint"
+                android:layout_marginEnd="@dimen/space_min"
+                android:textAlignment="textEnd"
+                android:textColor="@android:color/primary_text_dark"
+                android:textStyle="italic" />
 
         <TextView
             android:id="@+id/tvValueLCCS"
@@ -253,25 +270,6 @@
             android:textAlignment="textEnd"
             android:textColor="@android:color/primary_text_dark" />
 
-        <TextView
-            android:id="@+id/lbTotalQuoteBought"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="@string/quote_credit"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvTotalQuoteBought"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/quote_credit_hint"
-            android:textAlignment="textEnd"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="italic" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
