--- a/app/src/main/res/layout/bought_item_list.xml
+++ b/app/src/main/res/layout/bought_item_list.xml
@@ -19,6 +19,12 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
+        <ImageView
+            android:id="@+id/img_tag_bil"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/baseline_location_on_24"/>
+
         <TextView
             android:id="@+id/tvBoughtDate"
             android:layout_width="wrap_content"
@@ -49,11 +55,10 @@
             android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_more_bil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="?attr/colorPrimaryVariant"
             app:srcCompat="@drawable/more_vertical" />
 
     </LinearLayout>
@@ -251,34 +256,6 @@
             android:text="@string/money_hint"
             android:textAlignment="textEnd"
             android:textColor="@android:color/primary_text_dark" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llTotalQuoteBought"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llInterestBought"
-        tools:layout_editor_absoluteX="1dp">
-
-        <TextView
-            android:id="@+id/lbTotalQuoteBought"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/quote_credit"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvTotalQuoteBought2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/quote_credit_hint"
-            android:textAlignment="textEnd"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="italic" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
