--- a/app/src/main/res/layout-sw720dp/bought_item_list.xml
+++ b/app/src/main/res/layout-sw720dp/bought_item_list.xml
@@ -93,11 +93,10 @@
             android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_more_bil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="?attr/colorPrimaryVariant"
             app:srcCompat="@drawable/more_vertical" />
 
     </LinearLayout>
