--- a/app/src/main/res/layout/fragment_recap.xml
+++ b/app/src/main/res/layout/fragment_recap.xml
@@ -5,8 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/space_min"
-    android:orientation="vertical"
+    android:elevation="@dimen/card_elevator"
     tools:context=".finanzas.controller.RecapFragment">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
     <HorizontalScrollView
         android:id="@+id/scroll_rec"
@@ -48,4 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"/>
 
+
+        </LinearLayout>
+</ScrollView>
 </LinearLayout>
