--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,25 @@
     <color name="green_dark_trans">#44829F75</color>
     <color name="grey_dark">#8D6F6F6F</color>
     <color name="brown">#915B35</color>
+
+    <color name="graphic1">#5E0606</color>
+    <color name="graphic2">#986969</color>
+    <color name="graphic3">#6A6A6A</color>
+    <color name="graphic4">#BC8A69</color>
+    <color name="graphic5">#933710</color>
+    <color name="graphic6">#97724F</color>
+    <color name="graphic7">#874A11</color>
+    <color name="graphic8">#876911</color>
+    <color name="graphic9">#8E9779</color>
+    <color name="graphic10">#807C0E</color>
+    <color name="graphic11">#3D6A0F</color>
+    <color name="graphic12">#58816F</color>
+    <color name="graphic13">#09885F</color>
+    <color name="graphic14">#098C8E</color>
+    <color name="graphic15">#0E6871</color>
+    <color name="graphic16">#25405A</color>
+    <color name="graphic17">#053F63</color>
+    <color name="graphic18">#5263A6</color>
+    <color name="graphic19">#071977</color>
+    <color name="graphic20">#781E8E</color>
 </resources>
