feature add new graph in pads and error modeNight
Fix issue with nightMode in some devices, added new graph in paids and added touch in graph to select piece of pie and show information about that

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/fragment_paids.xml
+++ b/app/src/main/res/layout/fragment_paids.xml
@@ -145,6 +145,12 @@
                     app:icon="@android:drawable/ic_menu_add" />
 
             </LinearLayout>
+
+            <co.japl.android.myapplication.finanzas.holders.CustomDraw
+                android:id="@+id/cv_canvas_ps"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"/>
+
         </LinearLayout>
 
     </ScrollView>
