feature refactor credit card list items
migrate to composable functions

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/fragment_list_credit_card.xml
+++ b/app/src/main/res/layout/fragment_list_credit_card.xml
@@ -1,38 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_border_layout"
+    android:orientation="vertical"
     tools:context=".finanzas.controller.creditcard.ListCreditCard">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/space_min"
-        android:orientation="vertical">
+   <androidx.compose.ui.platform.ComposeView
+       android:layout_height="wrap_content"
+       android:layout_width="match_parent"
+       android:id="@+id/list_compose_lcc"/>
 
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/pb_load_ccs"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvCreditCardSettingCCS"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <Button
-            android:id="@+id/btnAddNewCCS"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:icon="@android:drawable/ic_menu_add"
-            android:text="@string/add_credit_card" />
-    </LinearLayout>
-    </ScrollView>
-
-</com.google.android.material.card.MaterialCardView>
+</LinearLayout>
